# csv-reports

./: .gitignore  Makefile  README.md  pyproject.toml
data/: countries1.csv  countries2.csv
src/csv_reports/: __main__.py  cli.py  formatter.py  models.py  reader.py
src/csv_reports/reports/: __init__.py  average_gdp.py
tests/: conftest.py  test_average_gdp.py  test_cli.py  test_formatter.py  test_integration.py  test_main.py  test_reader.py
