[project]
name = "csv-reports"
version = "0.1.0"
description = "CLI tool for generating macroeconomic data reports from CSV files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabulate",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-tabulate",
    "flake8",
    "flake8-aaa",
]

[project.scripts]
csv-reports = "csv_reports.__main__:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["csv_reports", "tests"]
mypy_path = "src"

[tool.flake8-aaa]
# Check only test files for AAA pattern

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
